sandbox/output
OneHundredDoors.java:35: error: cannot find symbol
        return result.toArray(new DS[amountOfDoorsPassed]);
               ^
  symbol:   variable result
  location: class OneHundredDoors
1 error
